// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MainContent /> > renders the component 1`] = `
.c1 {
  width: clamp(16rem,95vw,90rem);
}

.c0 {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
  background-color: #e9ecee;
}

.c2 {
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  height: 100%;
}

@media (min-width: 750px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
    gap: 2rem;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div>
        CharacterTableSection
      </div>
      <div>
        Pagination
      </div>
    </div>
  </main>
</div>
`;

exports[`<MainContent /> > when shouldShowData is false > should render the message container 1`] = `
.c1 {
  width: clamp(16rem,95vw,90rem);
}

.c0 {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
  background-color: #e9ecee;
}

.c2 {
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  height: 100%;
}

@media (min-width: 750px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
    gap: 2rem;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div>
        MessageContainer
      </div>
    </div>
  </main>
</div>
`;
